# JSFinder2

./: LICENSE  README.md  pyproject.toml  requirements.txt  test_urls.txt
.github/workflows/: workflow.yml
jsfinder2/: __main__.py  settings.py
jsfinder2/lib/: jsfinder2.py  utils.py
