[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "JSFinder2"
version = "0.1"
authors = [{ name = "Richard Schwabe" }]
maintainers = [{ name = 'Richard Schwabe', email = 'hello@richardschwabe.de' }]
description = "JSFinder2 can be used to find urls and subdomains in JS files."
readme = "README.md"
license = { file = 'LICENSE' }
dependencies = [
    'anyio==4.0.0',
    'beautifulsoup4==4.12.2',
    'certifi==2023.7.22',
    'charset-normalizer==3.2.0',
    'filelock==3.12.4',
    'h11==0.14.0',
    'httpcore==0.18.0',
    'httpx==0.25.0',
    'idna==3.4',
    'requests==2.31.0',
    'requests-file==1.5.1',
    'six==1.16.0',
    'sniffio==1.3.0',
    'soupsieve==2.5',
    'tldextract==3.5.0',
    'urllib3==2.0.4',
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
reptor = 'jsfinder2.__main__:run'

[project.urls]
"Homepage" = "https://github.com/richardschwabe/JSFinder2/blob/main/README.md"
"Documentation" = "https://github.com/richardschwabe/JSFinder2/blob/main/README.md"
"Bug Tracker" = "https://github.com/richardschwabe/JSFinder2r/issues"
"Source" = "https://github.com/richardschwabe/JSFinder2"

[tool.setuptools.package-data]
"*" = ["**/*.md"]
